--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<p><b>What is the capital of India?</b></p>
+<input type="radio" text="New Delhi">
+<label>New Delhi</label>
+<br/>
+<input type="radio" text="Mumbai">
+<label>Mumbai</label>
+<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+
 
 </body>
 
