--- a/main.html
+++ b/main.html
@@ -16,7 +16,8 @@
 <br/>
 <input type="radio" text="Mumbai">
 <label>Mumbai</label>
-<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.
+	 and is referred from <cite>https://en.wikipedia.org/wiki/New_Delhi</cite></blockquote>
 
 
 </body>
