--- a/main.html
+++ b/main.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-<p><b>What is the capital of India?</b></p>
-<input type="radio" text="New Delhi">
-<label>New Delhi</label>
-<br/>
-<input type="radio" text="Mumbai">
-<label>Mumbai</label>
-<blockquote><cite>New Delhi is the capital of India and an administrative district of NCT Delhi.
-	and is referred from https://en.wikipedia.org/wiki/New_Delhi</cite></blockquote>
-
-
+    <!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js"></script>
+    
+    <p><b>What is the capital of India?</b></p>
+    <input type="radio" name="capital" value="New Delhi">
+    <label for="New Delhi">New Delhi</label>
+    <br/>
+    <input type="radio" name="capital" value="Mumbai">
+    <label for="Mumbai">Mumbai</label>
+    
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+    </blockquote>
 </body>
-
 </html>
